@@ -8,12 +8,12 @@ build_requires 'Test::More';
 
 test_requires 'Pod::Coverage::Moose';
 
-requires 'Geometry::Primitive' => '0.06';
+requires 'Geometry::Primitive' => '0.07';
 requires 'Graphics::Color' => '0.06';
 requires 'Moose' => '0.54';
 requires 'MooseX::Clone' => '0.03';
 requires 'MooseX::AttributeHelpers' => '0.12';
-requires 'Tree::Simple' => '1.18';
+requires 'Forest::Tree' => '0.02';
 
 auto_install;
 
